# NPL-Modulo

./: .cruft.json  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
notebooks/: Practica_Limpieza_Texto.ipynb  README.md  archivo.parquet
